--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>ფინალური პროექტი</title>
   </head>
   <body>
-    <header></header>
+    <header class="header1">
+      <div class="headdiv">
+        <a href=""><img class="logo" src="images/tbclogo.webp" alt="" /></a>
+        <h1 class="headh1">HARRY POTTER</h1>
+        <nav>
+          <ul>
+            <a href="#"><li>მთავარი</li></a>
+            <a href="pages/about us"><li>ჩვენს შესახებ</li></a>
+            <a href="pages/services"><li>სერვისები</li></a>
+            <a href="pages/news"><li>სიახლე</li></a>
+            <a href="pages/contacts"><li>კონტაქტი</li></a>
+          </ul>
+        </nav>
+        <div class="headchild">
+          <input type="text" placeholder="Search..." />
+          <img class="headimg" src="images/reset.png" alt="" />
+        </div>
+        <img src="images/material-symbols-light_search.png" alt="" />
+        <div class="headchild2">
+          <img src="images/ph_user-light.png" alt="" />
+          <img class="headimg2" src="images/ei_location.png" alt="" />
+          <img class="headimg3" src="images/mdi-light_cart.png" alt="" />
+        </div>
+      </div>
+    </header>
+    <section class="sec1">
+      <img class="img1" src="images/ssss.jpg" alt="" />
+      <h1 class="h1">Harry Potter one of the gratest fantasy film series</h1>
+    </section>
+    <section class="sec2">
+      <div class="div1">
+        <div class="div2"></div>
+        <div class="div3">
+          <img class="img2" src="images/images-removebg-preview.png" alt="" />
+          <h1>About</h1>
+        </div>
+        <div class="div4"></div>
+      </div>
+    </section>
   </body>
 </html>
