--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <header class="header1">
       <div class="headdiv">
-        <a href=""><img class="logo" src="images/tbclogo.webp" alt="" /></a>
+        <a href="https://www.tbceducation.ge/"
+          ><img class="logo" src="images/tbclogo.webp" alt=""
+        /></a>
         <h1 class="headh1">HARRY POTTER</h1>
         <nav>
           <ul>
@@ -45,6 +47,66 @@
           <h1>About</h1>
         </div>
         <div class="div4"></div>
+      </div>
+    </section>
+    <section>
+      <div class="motherdiv1">
+        <div class="child1">
+          <div>
+            <img src="images/philosophec.jpg" alt="" />
+            <h1>Harry Potter and the Philosopher's Stone</h1>
+          </div>
+          <div>
+            <img
+              src="images/Harry Potter and the Chamber of Secrets.jpg"
+              alt=""
+            />
+            <h1>Harry Potter and the Chamber of Secrets</h1>
+          </div>
+          <div>
+            <img
+              src="images/Harry Potter and the Prisoner of Azkaban.jpg"
+              alt=""
+            />
+            <h1>Harry Potter and the Prisoner of Azkaban</h1>
+          </div>
+          <div>
+            <img src="images/Harry Potter and the Goblet of Fire.jpg" alt="" />
+            <h1>Harry Potter and the Goblet of Fire</h1>
+          </div>
+        </div>
+        <div class="child1">
+          <div>
+            <img
+              src="images/Harry Potter and the Order of the Phoenix.jpg"
+              alt=""
+            />
+            <h1>Harry Potter and the Order of the Phoenix</h1>
+          </div>
+          <div>
+            <img
+              src="images/Harry Potter and the Half-Blood Prince.jpg"
+              alt=""
+            />
+            <h1>Harry Potter and the Half-Blood Prince</h1>
+          </div>
+          <div class="div5">
+            <img
+              class="img3"
+              src="images/Harry Potter and the Deathly Hallows p1.jpg"
+              alt=""
+            />
+            <h1 class="h2">Harry Potter and the Deathly Hallows P1</h1>
+          </div>
+          <div class="div6">
+            <img
+              class="img4"
+              src="images/Harry_Potter_and_the_Deathly_Hallows_–_Part_2 copy.jpg"
+              alt=""
+            />
+            <h1 class="h3">Harry Potter and the Deathly Hallows P2</h1>
+          </div>
+        </div>
       </div>
     </section>
   </body>
