--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
     <section>
-      <div class="motherdiv1">
+      <div class="motherdiv1 container">
         <div class="child1">
           <div>
             <img src="images/philosophec.jpg" alt="" />
@@ -75,7 +75,7 @@
             <h1>Harry Potter and the Goblet of Fire</h1>
           </div>
         </div>
-        <div class="child1">
+        <div class="child2">
           <div>
             <img
               src="images/Harry Potter and the Order of the Phoenix.jpg"
@@ -90,21 +90,19 @@
             />
             <h1>Harry Potter and the Half-Blood Prince</h1>
           </div>
-          <div class="div5">
+          <div>
             <img
-              class="img3"
               src="images/Harry Potter and the Deathly Hallows p1.jpg"
               alt=""
             />
             <h1 class="h2">Harry Potter and the Deathly Hallows P1</h1>
           </div>
-          <div class="div6">
+          <div>
             <img
-              class="img4"
               src="images/Harry_Potter_and_the_Deathly_Hallows_–_Part_2 copy.jpg"
               alt=""
             />
-            <h1 class="h3">Harry Potter and the Deathly Hallows P2</h1>
+            <h1>Harry Potter and the Deathly Hallows P2</h1>
           </div>
         </div>
       </div>
