add about us page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <a href="#"><li>მთავარი</li></a>
-            <a href="pages/about us"><li>ჩვენს შესახებ</li></a>
+            <a href="pages/about us.html"><li>ჩვენს შესახებ</li></a>
             <a href="pages/services"><li>სერვისები</li></a>
             <a href="pages/news"><li>სიახლე</li></a>
             <a href="pages/contacts"><li>კონტაქტი</li></a>
