add contact news and about us

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <ul>
             <a href="#"><li>მთავარი</li></a>
             <a href="pages/about us.html"><li>ჩვენს შესახებ</li></a>
-            <a href="pages/services"><li>სერვისები</li></a>
-            <a href="pages/news"><li>სიახლე</li></a>
-            <a href="pages/contacts"><li>კონტაქტი</li></a>
+            <a href="pages/services.html"><li>სერვისები</li></a>
+            <a href="pages/news.html"><li>სიახლე</li></a>
+            <a href="pages/contacts.html"><li>კონტაქტი</li></a>
           </ul>
         </nav>
         <div class="headchild">
