--- a/pages/about us.html
+++ b/pages/about us.html
@@ -18,9 +18,9 @@
           <ul>
             <a href="../index.html"><li>მთავარი</li></a>
             <a href="#"><li>ჩვენს შესახებ</li></a>
-            <a href="pages/services"><li>სერვისები</li></a>
-            <a href="pages/news"><li>სიახლე</li></a>
-            <a href="pages/contacts"><li>კონტაქტი</li></a>
+            <a href="../pages/services.html"><li>სერვისები</li></a>
+            <a href="../pages/news.html"><li>სიახლე</li></a>
+            <a href="../pages/contacts.html"><li>კონტაქტი</li></a>
           </ul>
         </nav>
         <div class="headchild">
@@ -35,5 +35,38 @@
         </div>
       </div>
     </header>
+    <section>
+      <div class="abdiv1 container">
+        <img
+          class="abimg1"
+          src="../images/Wizarding_World_of_Harry_Potter_logo.png"
+          alt=""
+        />
+      </div>
+    </section>
+    <section class="sec2">
+      <div class="div1">
+        <div class="div2"></div>
+        <div class="div3">
+          <h1>Our Journey</h1>
+        </div>
+        <div class="div4"></div>
+      </div>
+    </section>
+    <section class="absec1 container">
+      <img
+        class="abimg2"
+        src="../images/Silo mentality blog image (1).webp"
+        alt=""
+      />
+      <div class="abdiv2">
+        <h1>
+          This website was created in 2020, initially its main purpose is to
+          provide users with information about Harry Potter. In 2021, due to
+          user growth, we decided to add products for sale.After that, many of
+          our customers appreciate our business and our items.
+        </h1>
+      </div>
+    </section>
   </body>
 </html>
