--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
     <section>
-      <div class="motherdiv1 container">
+      <div class="motherdiv1">
         <div class="child1">
           <div>
             <img src="images/philosophec.jpg" alt="" />
