--- a/pages/services.html
+++ b/pages/services.html
@@ -107,5 +107,54 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="footdiv">
+        <div class="footdiv1">
+          <div class="fchdiv1">
+            <img
+              class="fimg1"
+              src="../images/images-removebg-preview.png"
+              alt=""
+            />
+            <h1>HARRY POTTER</h1>
+          </div>
+          <h2>Get To Know Harry Potter Better</h2>
+          <ul>
+            <li>Home</li>
+            <li>About us</li>
+            <li>Product</li>
+            <li>Blog</li>
+            <li>Contact</li>
+          </ul>
+          <div class="fchdiv2">
+            <img src="../images/ic_baseline-phone.png" alt="" />
+            <h2>5937723</h2>
+            <img class="fimg2" src="../images/mdi_location.png" alt="" />
+            <h2>Georgia, Tbilisi</h2>
+          </div>
+        </div>
+        <div class="footdiv2">
+          <div class="fchdiv3">
+            <h2>Help</h2>
+            <div class="div4"></div>
+          </div>
+          <h1>FAQ</h1>
+          <h1>Shipping and returns</h1>
+          <h1>Payment methods</h1>
+        </div>
+        <div class="footdiv3">
+          <div class="fchdiv4">
+            <h2>Contact</h2>
+            <div class="div4"></div>
+          </div>
+          <h1>Instagram</h1>
+          <h1>Facebook</h1>
+          <h1>Twitter</h1>
+          <div class="footdiv4">
+            <input type="text" placeholder="Enter your email here..." />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
