--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -64,9 +64,9 @@
             <li>Contact</li>
           </ul>
           <div class="fchdiv2">
-            <img src="images/ic_baseline-phone.png" alt="" />
+            <img src="../images/ic_baseline-phone.png" alt="" />
             <h2>5937723</h2>
-            <img class="fimg2" src="images/mdi_location.png" alt="" />
+            <img class="fimg2" src="../images/mdi_location.png" alt="" />
             <h2>Georgia, Tbilisi</h2>
           </div>
         </div>
@@ -87,9 +87,9 @@
           <h1>Instagram</h1>
           <h1>Facebook</h1>
           <h1>Twitter</h1>
-        </div>
-        <div class="footdiv4">
-          <input type="text" placeholder="Enter your email here..." />
+          <div class="footdiv4">
+            <input type="text" placeholder="Enter your email here..." />
+          </div>
         </div>
       </div>
     </footer>
